# singleaxis-fabric

./: .commitlintrc.yaml  .gitignore  .gitleaks.toml  .licenserc.yaml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  lychee.toml
.github/: license-allowlist.txt
charts/: README.md
components/: README.md
components/langfuse-bootstrap/: Dockerfile  pyproject.toml
components/langfuse-bootstrap/src/fabric_langfuse_bootstrap/: __init__.py  __main__.py  client.py  config.py  main.py
components/langfuse-bootstrap/tests/: test_cli.py  test_client.py  test_config.py  test_main.py
components/presidio-sidecar/: Dockerfile  pyproject.toml
components/presidio-sidecar/src/fabric_presidio_sidecar/: __init__.py  __main__.py  app.py  presidio_analyzer.py  redactor.py
components/presidio-sidecar/tests/: stub_analyzer.py  test_app.py  test_cli.py  test_presidio_adapter.py  test_redactor.py
components/prompt-guard-sidecar/: .component-meta.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
components/prompt-guard-sidecar/src/fabric_prompt_guard_sidecar/: __init__.py  __main__.py  app.py  classifier.py  prompt_guard.py
components/prompt-guard-sidecar/tests/: __init__.py  stub_classifier.py  test_app.py  test_classifier.py  test_cli.py  test_prompt_guard.py
components/redteam-runner/: Dockerfile  pyproject.toml
components/redteam-runner/src/fabric_redteam_runner/: __init__.py  __main__.py  _util.py  config.py  emitter.py  garak.py  pyrit.py  results.py  runner.py
components/redteam-runner/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_drivers.py  test_drivers_happy.py  test_emitter.py  test_runner.py  test_venv_harness.py
components/update-agent/: Dockerfile  LICENSE  pyproject.toml
components/update-agent/src/fabric_update_agent/: __init__.py  __main__.py  _version.py  config.py  schema.py  signatures.py  verifier.py  version.py  webhook.py
components/update-agent/tests/: conftest.py  test_cli.py  test_config.py  test_schema.py  test_signatures.py  test_verifier.py  test_version.py  test_webhook.py
docs/: README.md  api-stability.md  architecture.md  auditor-checklist.md  building-fabric.md  capturing-interactions.md  decision-graph.md  deployment.md  enterprise-readiness.md  exporting-to-your-observability-backend.md  how-fabric-fits-in-your-agent-stack.md  (+4 more)
examples/harness-smoke/: pyproject.toml  smoke.py
examples/reference-agent/: README.md  pyproject.toml
examples/reference-agent/src/fabric_reference_agent/: __init__.py  __main__.py  agent.py
examples/reference-agent/tests/: conftest.py  test_agent.py  test_v04_e2e.py
sdk/python/: README.md  SCOPE.md  pyproject.toml
sdk/python/benchmarks/: README.md  __init__.py  _harness.py  _scenarios.py  run.py
sdk/python/soak/: README.md  __init__.py  _workload.py  run.py
sdk/python/src/fabric/: __init__.py  _attributes.py  _calls.py  _chain.py  _crosscut.py  _id_validators.py  _uds.py  _version.py  auto_instrument.py  baseline.py  checkpoint.py  client.py  decision.py  escalation.py  eval.py  execution.py  guardrails.py  judge.py  judge_runner.py  memory.py  nemo.py  policy.py  presidio.py  propagation.py  retrieval.py  side_effect.py  signing.py  stream.py  taxonomy.py  tool_auth.py  tracing.py
sdk/python/src/fabric/adapters/: __init__.py  agent_framework.py  crewai.py  langgraph.py
sdk/python/src/fabric/content_store/: __init__.py  base.py  local.py  s3.py
sdk/python/src/fabric/guardrail_adapters/: __init__.py  http.py  lakera.py
sdk/python/src/fabric/integrations/: __init__.py  mcp.py
sdk/python/src/fabric/judge_adapters/: __init__.py  deepeval.py  ragas.py  simple.py
sdk/python/src/fabric/policy_adapters/: __init__.py  cedar.py  http.py  opa.py
sdk/python/src/fabric/queue_transports/: __init__.py  _serialize.py  local.py  nats.py  redis.py  sqs.py
sdk/python/src/fabric/taxonomies/: mitre-atlas.json  owasp-llm.json
sdk/python/tests/: _fake_sidecar.py  conftest.py  test_adapters_agent_framework.py  test_adapters_crewai.py  test_adapters_langgraph.py  test_async.py  test_auto_instrument.py  test_calls.py  test_cedar_adapter.py  test_checkpoint.py  test_client.py  test_concurrency.py  test_conformance.py  test_content_ref.py  test_content_store.py  test_decision.py  test_deepeval_judge.py  test_escalation.py  test_eval.py  test_execution.py  test_generic_interaction.py  test_guardrail_chain.py  test_guardrails.py  test_hardening.py  test_http_guardrail_adapter.py  test_http_policy_adapter.py  test_id_validators.py  test_judge.py  test_judge_runner.py  test_lakera_adapter.py  test_mcp_integration.py  test_memory.py  test_nemo.py  test_policy.py  test_presidio.py  test_propagation.py  test_queue_serialize.py  test_queue_transport.py  test_queue_transports_external.py  test_ragas_judge.py  (+8 more)
sdk/python/tests/conformance/: README.md  __init__.py  generate.py  normalize.py  runner.py  scenarios.py  stubs.py  test_schema_enforcement.py
sdk/python/tests/conformance/adapters/: README.md  __init__.py  _fixtures.py  contracts.py  test_reference_adapters.py
sdk/python/tests/conformance/goldens/: bare_decision.json  checkpoint.json  content_ref_stamped.json  delegation.json  escalation.json  eval_record.json  execution.json  file_access.json  guardrail_block.json  guardrail_redaction.json  hook.json  interaction.json  interaction_deviation.json  interaction_tagged.json  llm_call.json  llm_call_rich.json  mcp_inventory.json  memory_erase.json  memory_invalidate.json  memory_read_write.json  policy_allow.json  policy_deny.json  policy_escalate.json  policy_fail_closed.json  policy_redact.json  policy_warn.json  queue_judge.json  replay_metadata.json  retrieval.json  side_effect.json  side_effect_parent_tool_call.json  skill.json  step_retry.json  tool_authorization_allow.json  tool_authorization_deny.json  tool_call.json  tool_call_error.json  workflow_execution.json
sdk/python/tests/conformance/schema/: fabric-decision-v1.schema.json
(+210 files in other folders)
