[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fabric-presidio-sidecar"
description = "SingleAxis Fabric Presidio PII redaction sidecar (Layer 1)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "AI5Labs Research OPC Private Limited", email = "fabric@singleaxis.ai" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
# Kept as a separate extra because Presidio pulls spaCy, which is
# heavy. `pip install .[presidio]` on the runtime image; tests use
# the stub analyzer and do not require Presidio installed.
presidio = [
  "presidio-analyzer>=2.2,<3.0",
  "presidio-anonymizer>=2.2,<3.0",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[project.scripts]
fabric-presidio-sidecar = "fabric_presidio_sidecar.__main__:main"

[tool.hatch.version]
path = "src/fabric_presidio_sidecar/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_presidio_sidecar"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=fabric_presidio_sidecar",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["fabric_presidio_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "PIE", "RET", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
