[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fabric-harness-smoke"
version = "0.1.0"
description = "End-to-end smoke test for the SingleAxis Fabric integration harness."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "AI5Labs Research OPC Private Limited", email = "fabric@singleaxis.ai" }]
dependencies = [
  "singleaxis-fabric",
  "opentelemetry-sdk>=1.28,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.28,<2.0",
]

[tool.uv.sources]
singleaxis-fabric = { path = "../../sdk/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["."]
